# Binocular

./: .dockerignore  .gitignore  .mailmap  README.md  docker-compose-non-dev.yml  docker-compose.yml  graphql.config.yml  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/docker-env/: action.yml
.github/actions/java-maven-setup/: action.yml
.github/workflows/: backend-fast.yml  backend-rust.yaml  backend.yml  build-docker.yml  build-offline.yml  eslint.yml
binocular-backend/: .gitignore  binocular.ts  package-lock.json  package.json  tsconfig.json
binocular-backend-new/: .editorconfig  .gitignore  README.md  pom.xml
binocular-backend-new/cli/: README.md  pom.xml
binocular-backend-new/cli/src/main/mylib/: Cargo.toml  rust-toolchain.toml  uniffi.toml
binocular-backend-new/cli/src/main/mylib/src/: lib.rs  math.udl
binocular-backend-new/cli/src/test/: README.md
binocular-backend-new/core/: pom.xml
binocular-backend-new/domain/: README.md  pom.xml
binocular-backend-new/export/: pom.xml
binocular-backend-new/ffi/: pom.xml
binocular-backend-new/ffi/lib/: Cargo.toml  uniffi.toml
binocular-backend-new/ffi/lib/crates/blame/: Cargo.toml
binocular-backend-new/ffi/lib/crates/blame/src/: lib.rs
binocular-backend-new/ffi/lib/crates/blame/src/git/: blame.rs
binocular-backend-new/ffi/lib/crates/blame/src/objects/: blame_result.rs
binocular-backend-new/ffi/lib/crates/commits/: Cargo.toml
binocular-backend-new/ffi/lib/crates/commits/src/: lib.rs
binocular-backend-new/ffi/lib/crates/commits/src/git/: error.rs  lookup.rs  metrics.rs  traverse.rs  utils.rs
binocular-backend-new/ffi/lib/crates/commits/tests/: Cargo.toml  main.rs
binocular-backend-new/ffi/lib/crates/commits/tests/git/: lookup.rs  mod.rs  traverse.rs
binocular-backend-new/ffi/lib/crates/diff/: Cargo.toml
binocular-backend-new/ffi/lib/crates/diff/src/: lib.rs
binocular-backend-new/ffi/lib/crates/diff/src/git/: commit.rs  traverse.rs
binocular-backend-new/ffi/lib/crates/diff/src/objects/: change.rs  entry.rs  file_diff.rs  outcome.rs
binocular-backend-new/ffi/lib/crates/diff/src/utils/: git_helper.rs
binocular-backend-new/ffi/lib/crates/shared/: Cargo.toml
binocular-backend-new/ffi/lib/crates/shared/src/: lib.rs  signature.rs
binocular-backend-new/ffi/lib/src/: lib.rs
binocular-backend-new/ffi/lib/src/ffi/: blame.rs  branch.rs  commit.rs  diff.rs  mod.rs  repository.rs  utils.rs
binocular-backend-new/ffi/lib/src/types/: blame.rs  branch.rs  commit.rs  diff.rs  error.rs  reference.rs  remote.rs  repo.rs  signature.rs
binocular-backend-new/ffi/lib/tests/: ffi_integration_tests.rs
binocular-backend-new/github/: pom.xml
binocular-backend-new/infrastructure-arangodb/: pom.xml
binocular-backend-new/infrastructure-sql/: README.md  pom.xml
binocular-backend-new/infrastructure-test/: pom.xml
binocular-backend-new/infrsastructure-test/: pom.xml
binocular-backend-new/jgit/: pom.xml
binocular-backend-new/web/: pom.xml
binocular-backend-new/web/src/test/: README.md
binocular-backend/cli/: cli.ts  exportDB.ts  setup.ts
binocular-backend/core/provider/: git.js  github.ts
binocular-backend/endpoints/: getCommitType.ts
binocular-backend/indexers/ci/: CIIndexer.ts  CIIndexer_old.js  GitHubCIIndexer.ts  GitLabCIIndexer.js  TravisCIIndexer.js
binocular-backend/indexers/its/: GitHubITSIndexer.ts
binocular-backend/indexers/vcs/: GitIndexer.js
binocular-backend/models/: Connection.ts  Model.ts  VersionChangeEvent.js  VersionChangeEventVulnerabilityConnection.js  Vulnerability.js  VulnerabilityAgeBucket.js  utils.ts
binocular-backend/models/connections/: AccountUserConnection.ts
binocular-backend/models/models/: Build.ts  Commit.ts  Issue.ts
binocular-backend/test/: base.test.ts  ciIndexer.test.ts  commit.test.ts  db.test.ts  git.test.ts  itsIndexer.test.ts  paginator.test.ts  utils.test.ts  vcsIndexer.test.ts
binocular-backend/test/helper/: utils.ts
binocular-backend/test/helper/db/: testModel.ts
binocular-backend/test/helper/gateway/: gatewayMock.ts
binocular-backend/test/helper/git/: helpers.ts  repositoryFake.ts
binocular-backend/test/helper/github/: gitHubCIIndexerMock.ts  gitHubCIIndexerRewire.ts  gitHubMock.ts  gitHubTestData.ts  octokitMock.ts
binocular-backend/types/: GithubTypes.ts  GitlabTypes.ts
binocular-backend/types/dtos/: BuildDto.ts
binocular-backend/types/supportingTypes/: ChangeHunk.ts
binocular-backend/utils/: context.ts  diffLockFiles.js  progress-reporter.ts  projectStructureHelper.ts
binocular-backend/vuln-metrics/pipelines/: enrichVersionChanges.js  persistVersionChanges.js  retrieveVulnerabilityInfo.js  vulnerabilityPipeline.js
binocular-backend/vuln-metrics/services/: computeVulnerabilityAgeBuckets.js
binocular-frontend/: package-lock.json  vite.config.ts
binocular-frontend-new/: .eslintrc.cjs  .gitignore  eslint.config.js  package-lock.json  package.json  popout.html  postcss.config.mjs  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.compose.config.ts  vite.config.ts
binocular-frontend-new/src/: App.tsx  app.module.css  app.module.scss  index.scss  main.tsx  tailwind.css  variables.scss
binocular-frontend-new/src/plugins/: pluginRegistry.ts
binocular-frontend-new/src/redux/: index.ts
binocular-frontend-new/src/utils/: confirmationDialog.tsx  dataPluginStorage.ts  databaseLoaders.ts
binocular-frontend/src/: main.tsx
binocular-frontend/src/reducers/: universalSettings.ts
binocular-frontend/src/types/: commitTypes.ts  unversalSettingsTypes.ts
binocular-frontend/src/utils/: getCommitType.ts
docker/: Dockerfile.offline  README.md  backend.Dockerfile  frontend.Dockerfile  frontend.v2.Dockerfile  offline.v1.Dockerfile
docs/: DATABASE.md
foxx/: schema.js
foxx/types/: account.js  build.js  commit.js  commitsFilesConnections.js  commitsUsersConnections.js  file.js  gitHubUser.js  gitlabNote.js  hunk.js  issue.js  mergeRequest.js  user.js
nginx/: nginx.conf
(+1991 files in other folders)
