[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.97" }
gix = { version = "0.70.0" }
libc = "0.2.171"
uniffi = { version = "0.29.1", features = ["cli"] }


[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }
