[package]
name = "commits"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true

autotests = false
include = ["src/**/*"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
gix = { workspace = true, default-features = true, features = ["mailmap", "max-performance"] }
gix-object = "0.52.0"
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
shared = { path = "../shared" }
